调整下推单据的页面布局，更换扫码模块

--- a/app/src/main/res/layout/activity_fhtzddb.xml
+++ b/app/src/main/res/layout/activity_fhtzddb.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fangzuo.assist.Activity.PushDownMTActivity">
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
@@ -26,30 +27,21 @@
 
         </RelativeLayout>
         <ListView
-            android:layout_below="@id/rl_top"
             android:id="@+id/lv_pushsub"
             android:layout_width="match_parent"
-            android:layout_height="120dp"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <ScrollView
-            android:layout_above="@id/ll_btn"
-            android:layout_below="@id/lv_pushsub"
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
@@ -62,10 +54,7 @@
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:gravity="center"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -76,10 +65,7 @@
                         android:gravity="center"/>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -89,20 +75,14 @@
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <com.fangzuo.assist.widget.MyWaveHouseSpinner
                         android:id="@+id/sp_wavehouseout"
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1"/>
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
@@ -115,10 +95,7 @@
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:gravity="center"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -129,10 +106,7 @@
                         android:gravity="center"/>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -142,10 +116,7 @@
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <Spinner
                         android:id="@+id/sp_wavehousein"
                         android:layout_width="0dp"
@@ -153,10 +124,7 @@
                         android:layout_weight="1"/>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -170,10 +138,7 @@
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:gravity="center"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -184,10 +149,7 @@
                         android:gravity="center"/>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -203,10 +165,7 @@
                         android:background="@drawable/tv_bg"
                         android:textSize="15sp"
                         android:textColor="@color/white"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <Spinner
                         android:id="@+id/sp_unit"
                         android:layout_width="0dp"
@@ -215,10 +174,7 @@
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -231,10 +187,7 @@
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:gravity="center"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -245,10 +198,7 @@
                         android:gravity="center"/>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color"/>
+                <include layout="@layout/line_heng"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -266,22 +216,25 @@
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1" />
+
+                    <include layout="@layout/line_shu"/>
                     <EditText
                         android:id="@+id/ed_num"
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1"
-                        android:background="@android:drawable/edit_text"
+                        android:background="@drawable/bg_edittext_selector"
                         android:textSize="15sp"
                         android:singleLine="true"
                         android:gravity="center"
                         android:inputType="numberDecimal"/>
 
                 </LinearLayout>
+
+                <include layout="@layout/line_heng"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     >
@@ -294,10 +247,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="15sp" />
 
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <TextView
                         android:visibility="invisible"
                         android:layout_width="0dp"
@@ -311,10 +261,7 @@
 
 
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_color" />
+                <include layout="@layout/line_heng"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:gravity="center_vertical"
@@ -329,10 +276,7 @@
                         android:background="@drawable/tv_bg"
                         android:textSize="15sp"
                         android:textColor="@color/white"/>
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/divider_color"/>
+                    <include layout="@layout/line_shu"/>
                     <EditText
                         android:visibility="invisible"
                         android:id="@+id/et_beizhu"
@@ -354,13 +298,7 @@
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:layout_height="40dp">
-
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color"/>
-
+            android:layout_height="35dp">
             <Button
                 android:id="@+id/btn_add"
                 android:layout_width="0dp"
@@ -370,11 +308,7 @@
                 android:text="@string/add"
                 android:background="@drawable/btn_check"/>
 
-
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color"/>
+            <include layout="@layout/line_shu"/>
             <Button
                 android:id="@+id/btn_backorder"
                 android:layout_width="0dp"
@@ -384,11 +318,7 @@
                 android:text="@string/push"
                 android:background="@drawable/btn_check"/>
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color"/>
-
+            <include layout="@layout/line_shu"/>
             <Button
                 android:id="@+id/btn_checkorder"
                 android:layout_width="0dp"
@@ -398,13 +328,8 @@
                 android:text="@string/review"
                 android:textColor="@android:color/white" />
 
-            <View
-                android:layout_width="2dp"
-                android:layout_height="match_parent"
-                android:background="@color/divider_color"/>
-
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="250dp"
