更换扫码入口(包括下推)，选中手机时，下推单据会显示扫描按钮

--- a/app/src/main/res/layout/activity_cgddsltzd.xml
+++ b/app/src/main/res/layout/activity_cgddsltzd.xml
@@ -25,6 +25,14 @@
                 android:text="采购订单下推收料通知单"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/iv_scan"
+                android:visibility="gone"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:background="@mipmap/scan"
+                android:layout_width="35dp"
+                android:layout_height="35dp" />
 
 
         </RelativeLayout>
