--- a/app/src/main/res/layout/activity_push_down_mt.xml
+++ b/app/src/main/res/layout/activity_push_down_mt.xml
@@ -23,6 +23,13 @@
                 android:text="销售订单下推"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/iv_scan"
+                android:visibility="gone"
+                android:layout_alignParentRight="true"
+                android:background="@mipmap/scan"
+                android:layout_width="35dp"
+                android:layout_height="35dp" />
         </RelativeLayout>
 
         <ListView
