--- a/app/src/main/res/layout/activity_xsddpdfltzd.xml
+++ b/app/src/main/res/layout/activity_xsddpdfltzd.xml
@@ -26,6 +26,14 @@
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
+            <ImageView
+                android:id="@+id/iv_scan"
+                android:visibility="gone"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:background="@mipmap/scan"
+                android:layout_width="35dp"
+                android:layout_height="35dp" />
 
         </RelativeLayout>
 
